Fix notification aler visibility

--- a/FrontEnd/src/app/admin/admin.component.css
+++ b/FrontEnd/src/app/admin/admin.component.css
@@ -8,93 +8,83 @@
     --base:white;
     background-color: var(--background);
 } */
-*
-{
-    background: var(--background);
+* {
+  background: var(--background);
 }
-#spinnerInAdmin
-{
-    width:100vw;
-    height:100vh;
-
+#spinnerInAdmin {
+  width: 100vw;
+  height: 100vh;
 }
 #including {
-    flex-grow: 1;
-    position: relative;
-height: 100vh;
-
+  flex-grow: 1;
+  position: relative;
+  height: 100vh;
 }
 
-*{
-color:var(--text)
+* {
+  color: var(--text);
 }
-#separator
-{
-    border: none;
-    height:0px;
-        box-shadow: 0px 0px 50px 3px var(--primary);
+#separator {
+  border: none;
+  height: 0px;
+  box-shadow: 0px 0px 50px 3px var(--primary);
+}
+#navbarAdmin input {
+  border: none;
 
+  box-shadow: 0 0 5px var(--text);
+
+  border-radius: 15px;
 }
-#navbarAdmin input
-{
-    border:none;
-    
-    box-shadow: 0 0 5px var(--text);
-    
-    border-radius: 15px;
-}
-#navbarAdmin input,button
-{
-    height:100%;   
+#navbarAdmin input,
+button {
+  height: 100%;
 }
 
-#navbarAdmin button 
-{
-    
-    border:none;
-    transition: 0.5s;
-    /* background: linear-gradient(135deg, transparent,var(--background));
+#navbarAdmin button {
+  border: none;
+  transition: 0.5s;
+  /* background: linear-gradient(135deg, transparent,var(--background));
     background-size: 200% 200%; */
-    text-shadow: 0 0 5px var(--text);
-    box-shadow: inset 0px 0px 2px 0px var(--primary);
+  text-shadow: 0 0 5px var(--text);
+  box-shadow: inset 0px 0px 2px 0px var(--primary);
 
-    /* box-shadow: 0 0 5px var(--text); */
-    
+  /* box-shadow: 0 0 5px var(--text); */
 }
 #navbarAdmin button::before {
-
-
-    border-radius: 15px;
-    /* background: var(--accent); */
-    transition: 20s;
-    transform: scale(.9);
-
+  border-radius: 15px;
+  /* background: var(--accent); */
+  transition: 20s;
+  transform: scale(0.9);
 }
 
 #navbarAdmin button:hover::before {
-    border-radius: 15px;
+  border-radius: 15px;
 
-    opacity: 1.0;
-    transform: scale(1.1);
-
+  opacity: 1;
+  transform: scale(1.1);
 }
-
 
 #navbarAdmin button:hover {
-    background-color:var(--primary)
-
-
+  background-color: var(--primary);
 }
 
-#ToggleAdminBar{
-    display:none;
+#ToggleAdminBar {
+  display: none;
 }
 @media only screen and (max-width: 600px) {
-    #ToggleAdminBar {
-        display: block ;
-    }
-    #ForCollaps
-    {
-        
-    }
-  } 
+  #ToggleAdminBar {
+    display: block;
+  }
+  #ForCollaps {
+  }
+}
+
+.notificationBtn {
+  display: inline;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  font-size: 10px;
+  padding-top: 2px;
+}
