--- a/FrontEnd/src/app/navbar/navbar.component.css
+++ b/FrontEnd/src/app/navbar/navbar.component.css
@@ -61,7 +61,9 @@
   }
   
   .dropdown-menu{
-    left: -160px;
+    background-color: rgb(25 55 100 / 90%);
+    left: -150px;
+    opacity: 1;
   }
   @media screen and (max-width: 992px) {
     .dropdown-menu{
